# Quadcraft

./: CMakeLists.txt  LICENSE.txt  README.md
res/shaders/: chunk.frag  chunk.vert
src/: block.c  block.h  camera.c  camera.h  chunk.c  chunk.h  lmath.c  lmath.h  main.c  textures.c  textures.h  utils.c  utils.h
